# antcrew-engine

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
antcrew_engine/: __init__.py  config.py
antcrew_engine/capabilities/: __init__.py  _utils.py  architect.py  base.py  bug_fixer.py  code_generator.py  code_regenerator.py  code_reviewer.py  dependency_installer.py  doc_generator.py  hitl_reviewer.py  review_fixer.py  spec_extractor.py  task_planner.py  team_executor.py  test_generator.py  test_runner.py  validators.py
antcrew_engine/cli/: __init__.py  app.py
antcrew_engine/engine/: __init__.py  artifact.py  bus_bridge.py  capability.py  events.py  goal.py  hitl.py  operator.py  registry.py  sandbox.py  selector.py  state.py  store.py  validator.py
antcrew_engine/models/: __init__.py  _engine_fixtures.py  anthropic_model.py  azure_openai_model.py  base.py  cache.py  fallback.py  gemini_model.py  groq_model.py  ollama_model.py  openai_model.py  simulated.py
antcrew_engine/testing/: __init__.py  llms.py
tests/capabilities/: test_dependency_installer.py
tests/cli/: test_cli_helpers.py
tests/engine/: test_architect.py  test_bug_fixer.py  test_code_generator.py  test_code_regenerator.py  test_code_reviewer.py  test_doc_generator.py  test_filesystem_store.py  test_hitl_reviewer.py  test_multi_repo_store.py  test_real_llm.py  test_review_fixer.py  test_sandbox.py  test_spec_extractor.py  test_task_planner.py  test_test_runner.py
